[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://audio/sndJump.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/Controls.gd" type="Script" id=3]
[ext_resource path="res://scenes/Audio.gd" type="Script" id=4]
[ext_resource path="res://fonts/BigPixelDemo.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://res/Menu.tres" type="Theme" id=6]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 5 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 70
custom_constants/margin_top = 70
custom_constants/margin_left = 70
custom_constants/margin_bottom = 70
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
margin_left = 70.0
margin_top = 70.0
margin_right = 730.0
margin_bottom = 538.0
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Main"]
margin_right = 660.0
margin_bottom = 444.0
size_flags_vertical = 3
alignment = 1

[node name="Vsync" type="CheckBox" parent="MarginContainer/Main/VBoxContainer2"]
margin_left = 296.0
margin_top = 172.0
margin_right = 364.0
margin_bottom = 196.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "VSYNC"

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/Main/VBoxContainer2"]
margin_left = 277.0
margin_top = 200.0
margin_right = 383.0
margin_bottom = 224.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "FULLSCREEN"

[node name="Audio" type="Button" parent="MarginContainer/Main/VBoxContainer2"]
margin_left = 301.0
margin_top = 228.0
margin_right = 358.0
margin_bottom = 248.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "AUDIO"
align = 0

[node name="Controls" type="Button" parent="MarginContainer/Main/VBoxContainer2"]
margin_left = 289.0
margin_top = 252.0
margin_right = 370.0
margin_bottom = 272.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "CONTROLS"
align = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main"]
margin_top = 448.0
margin_right = 660.0
margin_bottom = 468.0

[node name="Back" type="Button" parent="MarginContainer/Main/VBoxContainer"]
margin_left = 307.0
margin_right = 353.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "BACK"
align = 0

[node name="Audio" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_left = 70.0
margin_top = 70.0
margin_right = 730.0
margin_bottom = 538.0
script = ExtResource( 4 )

[node name="MasterLabel" type="Label" parent="MarginContainer/Audio"]
margin_left = 250.0
margin_right = 410.0
margin_bottom = 53.0
size_flags_horizontal = 4
text = "master"
uppercase = true

[node name="MasterSlider" type="HSlider" parent="MarginContainer/Audio"]
margin_top = 57.0
margin_right = 660.0
margin_bottom = 73.0
mouse_default_cursor_shape = 13
max_value = 1.0
step = 0.1

[node name="SoundLabel" type="Label" parent="MarginContainer/Audio"]
margin_left = 262.0
margin_top = 77.0
margin_right = 397.0
margin_bottom = 130.0
size_flags_horizontal = 4
text = "sound"
uppercase = true

[node name="SoundSlider" type="HSlider" parent="MarginContainer/Audio"]
margin_top = 134.0
margin_right = 660.0
margin_bottom = 150.0
mouse_default_cursor_shape = 13
max_value = 1.0
step = 0.1

[node name="MusicLabel" type="Label" parent="MarginContainer/Audio"]
margin_left = 263.0
margin_top = 154.0
margin_right = 397.0
margin_bottom = 207.0
size_flags_horizontal = 4
text = "music"
uppercase = true

[node name="MusicSlider" type="HSlider" parent="MarginContainer/Audio"]
margin_top = 211.0
margin_right = 660.0
margin_bottom = 227.0
mouse_default_cursor_shape = 13
max_value = 1.0
step = 0.1

[node name="QuietBG" type="CheckBox" parent="MarginContainer/Audio"]
margin_left = 239.0
margin_top = 231.0
margin_right = 421.0
margin_bottom = 273.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "QuietBG"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Audio"]
margin_top = 277.0
margin_right = 660.0
margin_bottom = 422.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 5 )

[node name="Back" type="Button" parent="MarginContainer/Audio"]
margin_left = 286.0
margin_top = 426.0
margin_right = 374.0
margin_bottom = 468.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "BACK"
align = 0

[node name="Test" type="AudioStreamPlayer" parent="MarginContainer/Audio"]
stream = ExtResource( 2 )
bus = "Sound"

[node name="Controls" type="VBoxContainer" parent="MarginContainer"]
visible = false
margin_left = 70.0
margin_top = 70.0
margin_right = 730.0
margin_bottom = 561.0
theme = ExtResource( 6 )
custom_constants/separation = -1
script = ExtResource( 3 )

[node name="Control" type="Control" parent="MarginContainer/Controls"]
margin_right = 660.0

[node name="Press" type="Label" parent="MarginContainer/Controls/Control"]
visible = false
margin_top = -58.0
margin_right = 660.0
margin_bottom = -5.0
text = "ENTER A KEY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Controls"]
margin_top = -1.0
margin_right = 660.0
margin_bottom = 409.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Controls/VBoxContainer"]
margin_right = 660.0
margin_bottom = 410.0
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer"]
margin_right = 320.0
margin_bottom = 410.0
size_flags_horizontal = 3

[node name="Key" type="Label" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "up"
align = 2
valign = 1
uppercase = true

[node name="Key2" type="Label" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 320.0
margin_bottom = 88.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "down"
align = 2
valign = 1
uppercase = true

[node name="Key3" type="Label" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 320.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "left"
align = 2
valign = 1
uppercase = true

[node name="Key4" type="Label" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "right"
align = 2
valign = 1
uppercase = true

[node name="Key5" type="Label" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 320.0
margin_bottom = 226.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "JUMP"
align = 2
valign = 1
uppercase = true

[node name="Key6" type="Label" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 320.0
margin_bottom = 272.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "shoot"
align = 2
valign = 1
uppercase = true

[node name="Key7" type="Label" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 320.0
margin_bottom = 318.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "restart"
align = 2
valign = 1
uppercase = true

[node name="Key8" type="Label" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 322.0
margin_right = 320.0
margin_bottom = 364.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "pause"
align = 2
valign = 1
uppercase = true

[node name="Key9" type="Label" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 368.0
margin_right = 320.0
margin_bottom = 410.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "skip"
align = 2
valign = 1
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer"]
margin_left = 340.0
margin_right = 660.0
margin_bottom = 410.0
size_flags_horizontal = 3

[node name="Up" type="Button" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 320.0
margin_bottom = 42.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "UP"
align = 0

[node name="Down" type="Button" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 46.0
margin_right = 320.0
margin_bottom = 88.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "DOWN"
align = 0

[node name="Left" type="Button" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 92.0
margin_right = 320.0
margin_bottom = 134.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "LEFT"
align = 0

[node name="Right" type="Button" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 138.0
margin_right = 320.0
margin_bottom = 180.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "RIGHT"
align = 0

[node name="Jump" type="Button" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 184.0
margin_right = 320.0
margin_bottom = 226.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "SHIFT"
align = 0

[node name="Shoot" type="Button" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 230.0
margin_right = 320.0
margin_bottom = 272.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Z"
align = 0

[node name="Reset" type="Button" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 276.0
margin_right = 320.0
margin_bottom = 318.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "R"
align = 0

[node name="Pause" type="Button" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 322.0
margin_right = 320.0
margin_bottom = 364.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "P"
align = 0

[node name="Skip" type="Button" parent="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 368.0
margin_right = 320.0
margin_bottom = 410.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "S"
align = 0

[node name="Reset" type="Button" parent="MarginContainer/Controls"]
margin_top = 408.0
margin_right = 660.0
margin_bottom = 450.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="MarginContainer/Controls"]
margin_top = 449.0
margin_right = 88.0
margin_bottom = 491.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_fonts/font = SubResource( 7 )
text = "BACK"
align = 0

[connection signal="toggled" from="MarginContainer/Main/VBoxContainer2/Vsync" to="." method="_on_Vsync_toggled"]
[connection signal="toggled" from="MarginContainer/Main/VBoxContainer2/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="MarginContainer/Main/VBoxContainer2/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="MarginContainer/Main/VBoxContainer2/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="MarginContainer/Main/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="MarginContainer/Audio/MasterSlider" to="MarginContainer/Audio" method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Audio/SoundSlider" to="MarginContainer/Audio" method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Audio/MusicSlider" to="MarginContainer/Audio" method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="MarginContainer/Audio/QuietBG" to="MarginContainer/Audio" method="_on_QuietBG_toggled"]
[connection signal="pressed" from="MarginContainer/Audio/Back" to="." method="_on_Audio_Back_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2/Up" to="MarginContainer/Controls" method="_on_Up_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2/Down" to="MarginContainer/Controls" method="_on_Down_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2/Left" to="MarginContainer/Controls" method="_on_Left_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2/Right" to="MarginContainer/Controls" method="_on_Right_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2/Jump" to="MarginContainer/Controls" method="_on_Jump_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2/Shoot" to="MarginContainer/Controls" method="_on_Shoot_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2/Reset" to="MarginContainer/Controls" method="_on_Reset_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2/Pause" to="MarginContainer/Controls" method="_on_Pause_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/VBoxContainer/HBoxContainer/VBoxContainer2/Skip" to="MarginContainer/Controls" method="_on_Skip_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/Reset" to="MarginContainer/Controls" method="_on_Controls_Reset_pressed"]
[connection signal="pressed" from="MarginContainer/Controls/Back" to="." method="_on_Control_Back_pressed"]
